--- a/public/index.html
+++ b/public/index.html
@@ -35,11 +35,11 @@
 					</div>
 					<div class="col-md-6 d-flex justify-content-md-end">
 						<div class="social-media">
-			    		<p class="mb-0 d-flex">
-			    			<a href="https://www.facebook.com/profile.php?id=100095041055304" target="_blank" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
-			    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
-			    		</p>
-		        </div>
+							<p class="mb-0 d-flex">
+								<a href="https://www.facebook.com/profile.php?id=100095041055304" target="_blank" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
+								<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
+							</p>
+		        		</div>
 					</div>
 				</div>
 			</div>
@@ -54,8 +54,8 @@
 	        <ul class="navbar-nav ml-auto">
 	        	<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
 	        	<li class="nav-item"><a href="#about" class="nav-link">About</a></li>
-	          <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
-	          <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+	          	<li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
+	          	<li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -174,7 +174,7 @@
 								<p>Our soft scrub process treats each surface with our biodegradable solution, rinsing at low pressure to eliminate organic growth and preventing it from regrowing for as long as possible. We’ll thoroughly clean your home’s deck and railings with the highest level of care and detail, giving them that fresh and revitalized appearance they deserve.</p>
 
 								<p>Whether it be wood, composite, or any other material, be sure to request a quote for deck cleaning on your free estimate today!</p>
-						  </div>
+						  	</div>
 						  <div class="tab-pane container p-0 fade" id="services-5">
 						  	<div class="img" style="background-image: url(images/services-5.jpg);"></div>
 						  	<h3><a href="#">Patio Cleaning</a></h3>
@@ -183,7 +183,7 @@
 							<p>Tidal Wave Power Washing is proud to offer patio washing services that will make your property’s assets stand out and withstand the test of time!</p>
 
 							<p>Our team will come to your commercial or residential property with the specialized equipment required to restore your space to its “like new” condition. We use top quality wood cleansers and surface washers to ensure that your patio is free of stains, algae, mold, dirt, and other imperfections.</p>
-						  </div>
+						  	</div>
 						  <div class="tab-pane container p-0 fade" id="services-6">
 						  	<div class="img" style="background-image: url(images/services-6.jpg);"></div>
 						  	<h3><a href="#">Handy Man Services</a></h3>
@@ -323,14 +323,14 @@
     		<div class="row d-md-flex justify-content-center">
     			<div class="col-md-12 col-lg-8 half p-3 py-5 pl-lg-5 ftco-animate">
     				<h2 class="mb-4">Free Consultation</h2>
-    				<form method="POST" action="chris.moyer@tidalwavepowerwashingobx.com" class="appointment">
+    				<form method="POST" action="https://formsubmit.co/chris.moyer@tidalwavepowerwashingobx.com" class="appointment">
     					<div class="row">
     						<div class="col-md-12">
 									<div class="form-group">
 			    					<div class="form-field">
 	          					<div class="select-wrap">
 	                      <div class="icon"><span class="fa fa-chevron-down"></span></div>
-	                      <select name="" id="" class="form-control">
+	                      <select name="select" id="" class="form-control">
 	                      	<option value="">Select services</option>
 	                        <option value="">House Washing</option>
 	                        <option value="">Driveway Cleaning</option>
@@ -347,7 +347,7 @@
 									<div class="form-group">
 										<div class="input-wrap">
 											<div class="icon"><span class="fa fa-user"></span></div>
-				              <input type="text" class="form-control" placeholder="Your Name">
+				              <input type="text" name="name" class="form-control" placeholder="Your Name" required>
 				            </div>
 			            </div>
 								</div>
@@ -355,7 +355,7 @@
 									<div class="form-group">
 										<div class="input-wrap">
 											<div class="icon"><span class="fa fa-paper-plane"></span></div>
-				              <input type="text" class="form-control" placeholder="Email Address">
+				              <input type="text" name="email" class="form-control" placeholder="Email Address" required>
 				            </div>
 			            </div>
 								</div>
@@ -363,7 +363,7 @@
 									<div class="form-group">
 			    					<div class="input-wrap">
 			            		<div class="icon"><span class="fa fa-calendar"></span></div>
-			            		<input type="text" class="form-control appointment_date" placeholder="Date">
+			            		<input type="text" name="date" class="form-control appointment_date" placeholder="Date">
 		            		</div>
 			    				</div>
 								</div>
@@ -371,13 +371,13 @@
 									<div class="form-group">
 			    					<div class="input-wrap">
 			            		<div class="icon"><span class="fa fa-clock-o"></span></div>
-			            		<input type="text" class="form-control appointment_time" placeholder="Time">
+			            		<input type="text" name="time" class="form-control appointment_time" placeholder="Time">
 		            		</div>
 			    				</div>
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-			              <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+			              <textarea name="textarea" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
 			            </div>
 								</div>
 								<div class="col-md-12">
